-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1
-
OS X
The attached test application works with system defined proxy when using Webkit but with WebEngine it fails to connect.
Mac has 2 network interfaces: 1 behind proxy and the other connected directly. The proxy does not require any authentication. The direct connection works fine.
Environment:
Qt 5.4.1
Xcode 6.2
OS X 10.10
| For Gerrit Dashboard: QTBUG-45376 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 112949,4 | Introduce ProxyResolverQt | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |