src/core/proxy_config_service_qt.cpp
@@ -39,6 +39,8 @@
 
 #include "proxy_config_service_qt.h"
 
+#include "proxy_resolver_qt.h"
+
 #include "base/bind.h"
 #include "content/public/browser/browser_thread.h"
 
@@ -105,9 +107,15 @@ net::ProxyConfigService::ConfigAvailability ProxyConfigServiceQt::GetLatestProxy
         return CONFIG_VALID;
     }
     m_qtApplicationProxy = qtProxy;
-    m_qtProxyConfig = net::ProxyConfig();
+    m_qtProxyConfig = (systemAvailability == CONFIG_VALID) ? systemConfig : net::ProxyConfig();
+    const bool useProxyResolver = ProxyResolverQt::useProxyResolverQt();
+
     if (qtProxy.type() == QNetworkProxy::NoProxy) {
         *config = systemConfig;
+        if (useProxyResolver) {
+            config->set_auto_detect(true);
+            config->set_pac_mandatory(true);
+        }
         return systemAvailability;
     }
 
@@ -132,6 +140,10 @@ net::ProxyConfigService::ConfigAvailability ProxyConfigServiceQt::GetLatestProxy
     }
 
     m_qtProxyConfig.proxy_rules() = qtRules;
+    if (useProxyResolver) {
+        m_qtProxyConfig.set_pac_mandatory(true);
+        m_qtProxyConfig.set_auto_detect(true);
+    }
     *config = m_qtProxyConfig;
     return CONFIG_VALID;
 }
